# libGraph

./: .gitignore  CMakeLists.txt  README.md
Google_tests/: CMakeLists.txt  GraphAlgorithmsTest.cpp  GraphAlgorithmsTests.cpp  GraphAlgorithmsTests.h  GraphClassTest.cpp  GraphClassTest.h  GraphClosureTests.h  TestsMain.cpp
Google_tests/tests/: GraphAlgorithmsTests.h  GraphClassTest.h  GraphClosureTests.h  GraphCoreTests.h  OuterplanarSubgraphsTests.h
cmake/: FindGUROBI.cmake
examples/algorithms/: CMakeLists.txt  main.cpp  test.cpp  test.h
examples/algorithms/ged/: CMakeLists.txt  main.cpp
examples/graphs/: CMakeLists.txt  main.cpp
examples/tu_datasets/: CMakeLists.txt  main.cpp
executables/: convert_graphs.cpp
executables/geodesic_core/: CMakeLists.txt  geodesic_core.cpp
executables/graph_conversions/: CMakeLists.txt  convert_graphs.cpp
executables/test/: closures.h  graph_functions.h  hops.h  load_save.h  test.cpp
executables/test/Results/: automorphisms_2.csv  automorphisms_3.csv  automorphisms_5.csv  automorphisms_6.csv  hops_runtime.csv
executables/test/TestData/: DGraph.bgf  DGraph.bgfs  XGraph.bgf
include/: DataClasses.h  Enums.h  GraphFunctions.h  GraphStaticFunctions.h  Load.h  LoadSave.h  LoadSaveGraphDatasets.h  SimplePatterns.h  libGraph.h  typedefs.h
include/Algorithms/: algorithms.h
include/Algorithms/GED/: GED.h  GEDApproximation.h  GEDEvaluation.h  GEDFunctions.h  GEDLIBWrapper.h  GEDStructs.h
include/Algorithms/GeodesicCore/: CoreAlgorithm.h  CoreApproximationAlgorithm.h  CoreGrowAlgorithm.h  CoreRandomAlgorithm.h
include/Algorithms/Graph/: GraphAlgorithms.h  OuterplanarSubgraph.h  OuterplanarSubgraphDFS.h  OuterplanarSubgraphMitchell.h  SpanningTrees.h
include/Algorithms/GraphMetricApproximation/: EvaluationGraphMetricApproximation.h  Layering.h  TreeEmbedding.h
include/Closures/: BaseOperator.h  GraphClosures.h
include/GraphDataStructures/: ExampleGraphs.h  GraphBase.h  GraphData.h  GraphDataStructures.h  GraphDirectedBase.h  GraphDirectedFeaturedBase.h  GraphExtended.h  GraphLabeledBase.h  GraphStructs.h  GraphUndirectedBase.h  GraphUndirectedFeaturedBase.h  OuterplanarGraphData.h  OuterplanarStructs.h
include/Hops/: Evaluation.h  Hops.h  HopsParameters.h  RootedPattern.h
include/io/: FileEvaluation.h  StaticFunctions.h  io.h  io.txx
python/graph_plotting/: graph_plotting.py
test/: CMakeLists.txt  closures.h  graph_functions.h  hops.h  load_save.h  test.cpp
test/Results/: automorphisms_4.csv
test/TestData/: DGraph.data  DGraph.edges
